# aoc2024

./: .gitignore  Cargo.toml
benches/: benches.rs
src/: lib.rs  main.rs  math.rs  util.rs
src/aoc24/: day02.rs  day05.rs  day07.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day6.rs  day8.rs  day9.rs
src/util/: coordinate.rs  direction.rs  gridtools.rs  iter.rs  mod.rs  submit.rs
